# AI-CS-Chatbot

./: .gitignore  LICENSE  README.md  app.py  basic_metrics.py  chatbot_terminal_backup.py  knowledge_base_techmarkt.txt  pyproject.toml  sys_prompt.txt  test_chat.py
cs_chatbot_v1.0/: .gitignore  README.md  app.py  basic_metrics.py  behaviour_guidelines.txt  requirements.txt
cs_chatbot_v1.0/templates/: chat.html
cs_chatbot_v1.1/: .gitignore  CLAUDE.md  README.md  app.py  basic_metrics.py  knowledge_base_techmarkt.txt  metrics_v1_1.json  pyproject.toml
cs_chatbot_v1.1/prompts/: behaviour_guidelines.txt
cs_chatbot_v1.1/scripts/: debug_chunking.py  investigate_retriever_internals.py  verify_chroma_cloud.py
cs_chatbot_v1.1/services/: conversation_service.py  rag_service.py
templates/: chat.html
